changed font size

--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -9,7 +9,7 @@
         <div class="container">
 
         <h1>len pi laso telo</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         toki a.
         <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
         <br>tenpo pini poka la, telo sewi mute li lon.
