--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -8,7 +8,7 @@
         <div class="container">
 
         <h1>sona pini</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         tenpo kama la mi sona ala sona e ni?
         <br>lon weka mi?
         <br>li sona ala sona e kule musi e suno?
