--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -8,7 +8,7 @@
         <div class="container">
 
         <h1>suno</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         tenpo mun.
         <br>mi mute li tawa.
         <br>kalama musi li pona.
