--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -8,7 +8,7 @@
         <div class="centered-container">
 
         <h1>tomo ni</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         tomo ni li suli a
         <br>sinpin ona li laso teSlo walo
         <br>kule ni li pona mute mute tawa mi
