--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -8,7 +8,7 @@
         <div class="container">
 
         <h1>tomo pi esun lipu</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
         <br>mi wile kama sona lon tomo ni, taso ni li pipo (ken la nimi ni li ike a a a).
