--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -8,7 +8,7 @@
     <body><div class="container">
 
         <h1>jan</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         jan li suli.
         <br>jan li ken sona e ijo mute.
         <br>sona mun, sona kasi, sona soweli, sona nasin...
