--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -9,7 +9,7 @@
         <div class="centered-container">
 
         <h1>ona</h1><hr>
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         ona li powe.
         <br>mi pali e ona.
         <br>tan la mi sona ala.
