--- a/sitelog.html
+++ b/sitelog.html
@@ -34,7 +34,7 @@
         <h2>→ 7/9/2022 09:33</h2>
         <p>I changed the font in the <a href="/mute-ante/nimi-mute">nimi mute</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
         <h2>→ 3/9/2022 17:13</h2>
-        <p>I now have a status.cafe thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
+        <p>I now have a <a href="https://status.cafe/users/cvni81" class="cafe">status.cafe</a> thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
         <h2>→ 1/9/2022 19:45</h2>
         <p>I might have added a bit too much but it's done now!</p>
         <h2>→ 1/9/2022 15:48</h2>
