--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -9,7 +9,7 @@
 
     <body><div class="centered-grid-container">
         <div class="sidebox">
-            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
+            <p><a href="/mute-ante">home</a></p><ul style="margin-top: 0px;margin-bottom: 0px;">
             <li><a href="/mute-ante/interests">interests</a></li>
             <li><a href="/mute-ante/musicians">musicians</a></li>
             <li><a href="/mute-ante/websites">websites</a></li>
