--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -87,7 +87,7 @@
         <br>mi o lukin e kasi mute, e telo sewi mute, e nasin mute...
         <br>o... lape...</p>
         <hr style="width: 50%;">
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         wa!
         <br>sewi li kama pimeja suli a...
         <br>mi pilin lape...
