--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -71,7 +71,7 @@
         <br>mi kama wawa a!
         <br>mi o kama sona a!</p>
         <hr style="width: 50%;">
-        <p style="font-size: large; padding: 10px">
+        <p style="padding: 10px">
         mi pini e kama sona a.
         <br>ken la, tenpo kama la ale li pona a.
         <br>alasa sona pi open suno li ike ala e suno ni a!
