--- a/broken.html
+++ b/broken.html
@@ -16,7 +16,7 @@
     </style></head>
 
     <body><div class="this-container">
-        <img src="/mute-ante/broken.png" alt="broken" width="100%">
-        this page doesn't exist<br>how did you get here
+        <img src="/mute-ante/broken.png" alt="broken">
+        <span style="text-align: center;">this page doesn't exist<br>how did you get here</span>
     </div>
     </body>
