--- a/broken.html
+++ b/broken.html
@@ -11,7 +11,8 @@
             position: absolute;
             left: 50%;
             bottom: 50%;
-            transform: translate(-50%, 50%);}
+            transform: translate(-50%, 50%);
+            text-align: center;}
 
     </style></head>
 
