--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@
 
     <body><div class="this-container">
         <img src="/mute-ante/broken.png" alt="broken"><br>
-        <span style="text-align: center;">this page doesn't exist<br>how did you get here</span>
+        <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/mute-ante">back to homepage</a></span>
     </div>
     </body>
