--- a/musicians.html
+++ b/musicians.html
@@ -8,13 +8,13 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
         <body><div class="centered-grid-container">
             <div class="sidebox">
-                <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-                <li><a href="/mute-ante/interests">interests</a></li>
-                <li><a href="/mute-ante/websites">websites</a></li>
-                <li><a href="/mute-ante/blender">blender</a></li>
-                <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
-                <li><a href="/mute-ante/difference">difference</a></li>
-                <li><a href="/mute-ante/sitelog">sitelog</a></li></ul>
+                <a href="/mute-ante">home</a> : 
+                <a href="/mute-ante/interests">interests</a> · 
+                <a href="/mute-ante/websites">websites</a> · 
+                <a href="/mute-ante/blender">blender</a> · 
+                <a href="/mute-ante/nimi-mute">nimi mute</a> · 
+                <a href="/mute-ante/difference">difference</a> · 
+                <a href="/mute-ante/sitelog">sitelog</a> · 
             </div>
             <div class="container">
         <h1>favorite musicians</h1>
