--- a/musicians.html
+++ b/musicians.html
@@ -6,17 +6,17 @@
         <meta charset="UTF-8">
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
-        <body><div class="centered-grid-container">
-            <div class="sidebox">
+        <body><header><nav>
+            <div class="linkbox">
                 <a href="/mute-ante">home</a> : 
                 <a href="/mute-ante/interests">interests</a> · 
                 <a href="/mute-ante/websites">websites</a> · 
                 <a href="/mute-ante/blender">blender</a> · 
                 <a href="/mute-ante/nimi-mute">nimi mute</a> · 
                 <a href="/mute-ante/difference">difference</a> · 
-                <a href="/mute-ante/sitelog">sitelog</a> · 
-            </div>
-            <div class="container">
+                <a href="/mute-ante/sitelog">sitelog</a>
+            </nav></header>
+        <div class="container">
         <h1>favorite musicians</h1>
         <hr>
         <ul>
