added centered nav bar to most pages

--- a/blender.html
+++ b/blender.html
@@ -18,16 +18,15 @@
 
     </style></head>
 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-            <li><a href="/mute-ante/interests">interests</a></li>
-            <li><a href="/mute-ante/musicians">musicians</a></li>
-            <li><a href="/mute-ante/websites">websites</a></li>
-            <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
-            <li><a href="/mute-ante/difference">difference</a></li>
-            <li><a href="/mute-ante/sitelog">sitelog</a></li></ul>
-        </div>
+        <body><header><nav>
+            <a href="/mute-ante">home</a> <b>:</b>
+            <a href="/mute-ante/interests">interests</a> · 
+            <a href="/mute-ante/websites">websites</a> · 
+            <a href="/mute-ante/blender">blender</a> · 
+            <a href="/mute-ante/nimi-mute">nimi mute</a> · 
+            <a href="/mute-ante/difference">difference</a> · 
+            <a href="/mute-ante/sitelog">sitelog</a>
+        </nav></header>
         <div class="container">
         <h1>some things made in blender</h1>
         <hr>
