--- a/musicians.html
+++ b/musicians.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
         <body><header><nav>
-                <a href="/mute-ante">home</a> : 
+                <a href="/mute-ante">home</a> <b>:</b>
                 <a href="/mute-ante/interests">interests</a> · 
                 <a href="/mute-ante/websites">websites</a> · 
                 <a href="/mute-ante/blender">blender</a> · 
