--- a/sitelog.html
+++ b/sitelog.html
@@ -16,16 +16,15 @@
             #statuscafe{margin-top: 20px; margin-bottom: 20px}
         </style></head>
 
-    <body><div class="grid-container">
-        <div class="sidebox">
-            <a href="/mute-ante">home</a><ul style="margin-top: 0px;margin-bottom: 0px;">
-            <li><a href="/mute-ante/interests">interests</a></li>
-            <li><a href="/mute-ante/musicians">musicians</a></li>
-            <li><a href="/mute-ante/websites">websites</a></li>
-            <li><a href="/mute-ante/blender">blender</a></li>
-            <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
-            <li><a href="/mute-ante/difference">difference</a></li></ul>
-        </div>
+        <body><header><nav>
+            <a href="/mute-ante">home</a> <b>:</b>
+            <a href="/mute-ante/interests">interests</a> · 
+            <a href="/mute-ante/websites">websites</a> · 
+            <a href="/mute-ante/blender">blender</a> · 
+            <a href="/mute-ante/nimi-mute">nimi mute</a> · 
+            <a href="/mute-ante/difference">difference</a> · 
+            <a href="/mute-ante/sitelog">sitelog</a>
+        </nav></header>
         <div class="container">
         <h1>sitelog</h1>
         <hr>
