--- a/blender.html
+++ b/blender.html
@@ -21,8 +21,8 @@
         <body><header><nav>
             <a href="/mute-ante">home</a> <b>:</b>
             <a href="/mute-ante/interests">interests</a> · 
+            <a href="/mute-ante/musicians">musicians</a> · 
             <a href="/mute-ante/websites">websites</a> · 
-            <a href="/mute-ante/blender">blender</a> · 
             <a href="/mute-ante/nimi-mute">nimi mute</a> · 
             <a href="/mute-ante/difference">difference</a> · 
             <a href="/mute-ante/sitelog">sitelog</a>
