--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -6,17 +6,15 @@
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
     </head>
-
-    <body><div class="centered-grid-container">
-        <div class="sidebox">
-            <p style="margin: 0"><a href="/mute-ante">home</a></p><ul style="margin-top: 0px;margin-bottom: 0px;">
-            <li><a href="/mute-ante/interests">interests</a></li>
-            <li><a href="/mute-ante/musicians">musicians</a></li>
-            <li><a href="/mute-ante/websites">websites</a></li>
-            <li><a href="/mute-ante/blender">blender</a></li>
-            <li><a href="/mute-ante/difference">difference</a></li>
-            <li><a href="/mute-ante/sitelog">sitelog</a></li></ul>
-        </div>
+        <body><header><nav>
+            <a href="/mute-ante">home</a> <b>:</b>
+            <a href="/mute-ante/interests">interests</a> · 
+            <a href="/mute-ante/musicians">musicians</a> · 
+            <a href="/mute-ante/websites">websites</a> · 
+            <a href="/mute-ante/blender">blender</a> · 
+            <a href="/mute-ante/difference">difference</a> · 
+            <a href="/mute-ante/sitelog">sitelog</a>
+        </nav></header>
         <div class="container">
         <h1>nimi mute</h1>
         <hr>
