made font size larger

--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -6,7 +6,7 @@
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
     </head>
-        <body><header><nav>
+        <body><header style="font-size: larger;"><nav>
             <a href="/mute-ante">home</a> <b>:</b>
             <a href="/mute-ante/interests">interests</a> · 
             <a href="/mute-ante/musicians">musicians</a> · 
