--- a/sitelog.html
+++ b/sitelog.html
@@ -30,6 +30,8 @@
         <hr>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
+        <h2>→ 8/9/2022 19:36</h2>
+        <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
         <h2>→ 7/9/2022 09:33</h2>
         <p>I changed the font in the <a href="/mute-ante/nimi-mute">nimi mute</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
         <h2>→ 3/9/2022 17:13</h2>
