--- a/websites/geo.html
+++ b/websites/geo.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="centered-container">
+    <body><div class="container">
         <h1>geography and flags</h1>
         <hr>
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
