--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
     </style></head>
 
     <body><div class="this-container">
+        <img href="/mute-ante/walking.gif" alt="walking"><br>
         <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/mute-ante">back to homepage</a></span>
     </div>
     </body>
