--- a/blenders/buttons.html
+++ b/blenders/buttons.html
@@ -12,16 +12,16 @@
         <hr>
         <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
         <p>One with cubes walking:</p>
-        <img src="/mute-ante/buttons/walking.gif" alt="walking">
+        <img src="/mute-ante/blenders/buttons/walking.gif" alt="walking">
         <p>Two having fun with shadows and tihngs:</p>
-        <img src="/mute-ante/buttons/shadow.gif" alt="shadow"><img src="/mute-ante/buttons/what.gif" alt="what">
+        <img src="/mute-ante/blenders/buttons/shadow.gif" alt="shadow"><img src="/mute-ante/blenders/buttons/what.gif" alt="what">
         <p>And two others with a spinning color ring:</p>
-        <img src="/mute-ante/buttons/colorring1.gif" alt="colorring1"><img src="/mute-ante/buttons/colorring2.gif" alt="colorring2">
+        <img src="/mute-ante/blenders/buttons/colorring1.gif" alt="colorring1"><img src="/mute-ante/blenders/buttons/colorring2.gif" alt="colorring2">
         <p>There was another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good:</p>
-        <img src="/mute-ante/buttons/waves.gif" alt="waves">
+        <img src="/mute-ante/blenders/buttons/waves.gif" alt="waves">
         <p>But at least I got some nice still renders.</p>
-        <img src="/mute-ante/buttons/sticks1" alt="sticks1" width="100%">
-        <img src="/mute-ante/buttons/sticks2" alt="sticks2" width="100%">
+        <img src="/mute-ante/blenders/buttons/sticks1" alt="sticks1" width="100%">
+        <img src="/mute-ante/blenders/buttons/sticks2" alt="sticks2" width="100%">
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
 
         <p> ⇤ <a href="/mute-ante/blender">go back</a></p>
