--- a/blenders/buttons.html
+++ b/blenders/buttons.html
@@ -13,7 +13,7 @@
         <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
         <p>One with cubes walking:</p>
         <img src="/mute-ante/blenders/buttons/walking.gif" alt="walking">
-        <p>Two having fun with shadows and tihngs:</p>
+        <p>Two having fun with shadows and things:</p>
         <img src="/mute-ante/blenders/buttons/shadow.gif" alt="shadow"><img src="/mute-ante/blenders/buttons/what.gif" alt="what">
         <p>And two others with a spinning color ring:</p>
         <img src="/mute-ante/blenders/buttons/colorring1.gif" alt="colorring1"><img src="/mute-ante/blenders/buttons/colorring2.gif" alt="colorring2">
