--- a/blenders/buttons.html
+++ b/blenders/buttons.html
@@ -20,8 +20,8 @@
         <p>There was another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good:</p>
         <img src="/mute-ante/blenders/buttons/waves.gif" alt="waves">
         <p>But at least I got some nice still renders.</p>
-        <img src="/mute-ante/blenders/buttons/sticks1" alt="sticks1" width="100%">
-        <img src="/mute-ante/blenders/buttons/sticks2" alt="sticks2" width="100%">
+        <img src="/mute-ante/blenders/buttons/sticks1.png" alt="sticks1" width="100%">
+        <img src="/mute-ante/blenders/buttons/sticks2.png" alt="sticks2" width="100%">
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
 
         <p> ⇤ <a href="/mute-ante/blender">go back</a></p>
