--- a/sitelog.html
+++ b/sitelog.html
@@ -30,6 +30,8 @@
         <hr>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
+        <h2>→ 10/9/2022 18:55</h2>
+        <p>I made a couple <a href="/mute-ante/blenders/buttons">buttons</a>. <img src="/mute-ante/blenders/buttons/walking.gif" alt="walking"></p>
         <h2>→ 8/9/2022 19:36</h2>
         <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
         <h2>→ 7/9/2022 09:33</h2>
