--- a/blenders/buttons.html
+++ b/blenders/buttons.html
@@ -22,6 +22,8 @@
         <p>But at least I got some nice still renders.</p>
         <img src="/mute-ante/blenders/buttons/sticks1.png" alt="sticks1" width="100%">
         <img src="/mute-ante/blenders/buttons/sticks2.png" alt="sticks2" width="100%">
+        <img src="/mute-ante/blenders/buttons/walking.png" alt="walking" width="100%">
+        <img src="/mute-ante/blenders/buttons/grid.png" alt="grid" width="100%">
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
 
         <p> ⇤ <a href="/mute-ante/blender">go back</a></p>
