added another button

--- a/blenders/buttons.html
+++ b/blenders/buttons.html
@@ -25,6 +25,7 @@
         <img src="/mute-ante/blenders/buttons/walking.png" alt="walking" width="100%">
         <img src="/mute-ante/blenders/buttons/grid.png" alt="grid" width="100%">
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
-
+        <p>Edit: i did!!</p>
+        <img src="/mute-ante/blenders/buttons/carpediem.gif" alt="carpediem">
         <p> ⇤ <a href="/mute-ante/blender">go back</a></p>
     </div></body>
