--- a/i.html
+++ b/i.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{i}/title>
+        <title>{i}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body>
