--- a/i.html
+++ b/i.html
@@ -8,6 +8,6 @@
 
     <body>
 
-    <h1>{i}</h1>
+    <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
 
     </body>
