--- a/i.html
+++ b/i.html
@@ -9,14 +9,6 @@
     <body>
 
     <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
-    A place for all that is devoid of meaning or context. It currently contains no items, however it may in the future. This page is also currently under construction. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.
-    <ul><li>Note to webmaster:</li></ul>
-    This website can't include anything that can cause any type of problem in the future, to you or anyone so, take proper caution, however not unnecessarily extreme caution. Hence, no danger is and will ever present. All is and shall be well.
-    <ul><li>Note to reader:</li></ul>
-    We assure that the purposes of this page (and for that matter, the entire website) do not include illegalities of any sort, including piracy or copyright infringement.
-    The specific purpose of this section of the website ({i}) is externalizing any thoughts (of good or bad quality) so that any visitor may or may not read and, therefore, acknowledge it.
-    The pompous language featured in this section of the website ({i}) features no real purpose other than differentiating it from the remainder of the website and/or a satire/criticism of the needlessly complicated language featured in a court of law. Also, it may change between the items here featured.
-    We also want to make it abundantly clear that, may you have any questions regarding anything contained in this website (related to the language or otherwise), you may contact us through <a href="http://discordapp.com/users/691348576093077535">discord</a> (where we can be contacted quickest).
-    Also, please do not take any content of this page personally.
+    <p>A place for all that is devoid of meaning or context. It currently contains no items, however it may in the future. This page is also currently under construction. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
 
     </body>
