--- a/i.html
+++ b/i.html
@@ -9,6 +9,6 @@
     <body>
 
     <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
-    <p>A place for all that is devoid of meaning or context. It currently contains no items, however it may in the future. This page is also currently under construction. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
+    <p>A place for all that is devoid of meaning or context. It currently contains no items, however it may in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
 
     </body>
