--- a/i.html
+++ b/i.html
@@ -9,7 +9,7 @@
     <body>
 
     <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
-    <p>A place for all that is devoid of meaning or context. It currently contains no items, however it may in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
+    <p>A place for all that is devoid of context. It currently contains no items, however it may in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
     
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
