added john and other stuff

--- a/i/changelog.html
+++ b/i/changelog.html
@@ -3,15 +3,14 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{i}</title>
+        <title>{changelog}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body>
 
-    <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
-    <p>A place for all that is devoid of context. It currently contains only but a changelog, however it may have other things in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
+    <h1><span style="color: #9b9dac">{</span>changelog<span style="color: #9b9dac">}</span></h1>
+    <h2><span style="color: #9b9dac">{</span>11/9/2022 18:46</h2>
+        <p>Created this section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
     
-    <ul><li><a href="/mute-ante/i/changelog">changelog</a></li>: logs the changes made to only this specific section of the website.</ul>
-
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
