--- a/sitelog.html
+++ b/sitelog.html
@@ -31,7 +31,7 @@
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
         <h2>→ 11/9/2022 18:15</h2>
-        <p>Just added a new section called <a href="/mute-ante/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be.</p>
+        <p>Just added a new section called <a href="/mute-ante/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
         <h2>→ 10/9/2022 18:55</h2>
         <p>I made a couple <a href="/mute-ante/blenders/buttons">buttons</a>. <img src="/mute-ante/blenders/buttons/walking.gif" alt="walking"></p>
         <h2>→ 8/9/2022 19:36</h2>
