--- a/i.html
+++ b/i.html
@@ -11,7 +11,7 @@
     <h1><span style="color: #9b9dac">{</span>i<span style="color: #9b9dac">}</span></h1>
     <p>A place for all that is devoid of context. It currently contains only but a changelog, however it may have other things in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
     
-    <ul><li><a href="/mute-ante/i/changelog">changelog</a></li>: logs the changes made to only this specific section of the website.</ul>
+    <ul><li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to only this specific section of the website.</li></ul>
 
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
