--- a/i/changelog.html
+++ b/i/changelog.html
@@ -9,7 +9,7 @@
     <body>
 
     <h1><span style="color: #9b9dac">{</span>changelog<span style="color: #9b9dac">}</span></h1>
-    <h2><span style="color: #9b9dac">{</span>11/9/2022 18:46</h2>
+    <h2><span style="color: #9b9dac">- </span>11/9/2022 18:46</h2>
         <p>Created this section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
     
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
