--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>≠</title>
+        <title>nimi mute: sona pini</title>
         <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style>     <body>
         <div class="container">
