--- a/i/buttons.html
+++ b/i/buttons.html
@@ -19,6 +19,6 @@
     <h2><span style="color: #5d6d80">- </span>other neat places</h2>
     <a href="https://kpwu.neocities.org/"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
     
-        <a href="/mute-ante/i" style="color: #5d6d80">go back</a>
+    <br><a href="/mute-ante/i" style="color: #5d6d80">go back</a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
