--- a/i/buttons.html
+++ b/i/buttons.html
@@ -7,16 +7,21 @@
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-color: #b8cadf;}
+        a::after{content: "}"; color: #5d6d80;}
+        a::before{content: "{"; color: #5d6d80;}
+        h1::after{content: "}"; color: #5d6d80;}
+        h1::before{content: "{"; color: #5d6d80;}
+        h2::before{content: "- "; color: #5d6d80;}
     </style>
     </head>
 
     <body>
 
-    <h1><span style="color: #5d6d80">{</span>buttons<span style="color: #5d6d80">}</span></h1>
+    <h1>buttons</h1>
     <p>This part of the site houses many many many (as many as currently possible) buttons, from people we talk to on discord and other folks cool things we've come accross and think you should look at!</p>
-    <h2><span style="color: #5d6d80">- </span>acquaintances</h2>
+    <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> <a href="https://motan.gay/" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> <a href="https://chiitopia.neocities.org"><img src="https://chiitopia.neocities.org/images/balls.png" alt="my site. youre looking at it right now"></a> <a href="https://jansamosi.ichi.city/"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a>
-    <h2><span style="color: #5d6d80">- </span>other neat places</h2>
+    <h2>other neat places</h2>
     <a href="https://kpwu.neocities.org/"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
     
     <br><a href="/mute-ante/i" style="color: #5d6d80">go back</a>
