--- a/i/buttons.html
+++ b/i/buttons.html
@@ -7,8 +7,10 @@
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-color: #b8cadf;}
+        a{color: #475464;}
         a::after{content: "}"; color: #5d6d80;}
         a::before{content: "{"; color: #5d6d80;}
+        a.button::after, a.button::before{content: ""}
         h1::after{content: "}"; color: #5d6d80;}
         h1::before{content: "{"; color: #5d6d80;}
         h2::before{content: "- "; color: #5d6d80;}
@@ -20,9 +22,9 @@
     <h1>buttons</h1>
     <p>This part of the site houses many many many (as many as currently possible) buttons, from people we talk to on discord and other folks cool things we've come accross and think you should look at!</p>
     <h2>acquaintances</h2>
-    <a href=https://tabby-the-tabby.neocities.org><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> <a href="https://motan.gay/" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> <a href="https://chiitopia.neocities.org"><img src="https://chiitopia.neocities.org/images/balls.png" alt="my site. youre looking at it right now"></a> <a href="https://jansamosi.ichi.city/"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a>
+    <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> <a href="https://motan.gay/"  class="button" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> <a href="https://chiitopia.neocities.org" class="button"><img src="https://chiitopia.neocities.org/images/balls.png" alt="my site. youre looking at it right now"></a> <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a>
     <h2>other neat places</h2>
-    <a href="https://kpwu.neocities.org/"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
+    <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
     
     <br><a href="/mute-ante/i" style="color: #5d6d80">go back</a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
