--- a/i/buttons.html
+++ b/i/buttons.html
@@ -8,12 +8,12 @@
     <style>
         body{background-color: #b8cadf;}
         a{color: #475464;}
-        a::after{content: "}"; color: #5d6d80;}
-        a::before{content: "{"; color: #5d6d80;}
+        a::after{content: "}"; color: #7ba0cc}
+        a::before{content: "{"; color: #7ba0cc;}
         a.button::after, a.button::before{content: ""}
-        h1::after{content: "}"; color: #5d6d80;}
-        h1::before{content: "{"; color: #5d6d80;}
-        h2::before{content: "- "; color: #5d6d80;}
+        h1::after{content: "}"; color: #7ba0cc;}
+        h1::before{content: "{"; color: #7ba0cc;}
+        h2::before{content: "- "; color: #7ba0cc;}
     </style>
     </head>
 
@@ -26,6 +26,6 @@
     <h2>other neat places</h2>
     <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
     
-    <br><a href="/mute-ante/i" style="color: #5d6d80">go back</a>
+    <br><a href="/mute-ante/i">go back</a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
