added to changelog

--- a/i.html
+++ b/i.html
@@ -11,7 +11,10 @@
     <h1>i</h1>
     <p>A place for all that is devoid of context. It currently contains nothing but a changelog, however it may have other things in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
     
-    <ul><li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li></ul>
+    <ul>
+        <li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li>
+        <li><a href="/mute-ante/i/buttons">buttons</a>: visual links to other folks' websites.</li>
+    </ul>
 
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
