--- a/i/changelog.html
+++ b/i/changelog.html
@@ -11,6 +11,8 @@
     <h1>changelog</h1>
     <h2>11/9/2022 18:46</h2>
         <p>Created this section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
+    <h2>12/9/2022 09:20</h2>
+    <p>There is now <a href="/mute-ante/i/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
     
         <a href="/mute-ante/i">go back</a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
