--- a/i.html
+++ b/i.html
@@ -9,7 +9,7 @@
     <body>
 
     <h1>i</h1>
-    <p>A place for all that is devoid of context. It currently contains nothing but a changelog, however it may have other things in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
+    <p>A place for all that is devoid of context. It currently contains only 2 items, however it may have other things in the future. If you wish to return to the homepage, click <a href="/mute-ante">here</a>.</p>
     
     <ul>
         <li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li>
