--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -6,10 +6,11 @@
         <title>{handdrawn}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
+        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);background-repeat:no-repeat;background-size:cover}
     </style>
     </head>
 
-    <body background="/mute-ante/i/handdrawn/background.jpg">
+    <body>
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}">
     <br><a href="/mute-ante/i">go back</a>
     </body>
