--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -6,11 +6,11 @@
         <title>{handdrawn}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);background-repeat:no-repeat;background-size:cover}
+        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);background-repeat:no-repeat;background-size:cover;padding-left: 250px;padding-top:20px;}
     </style>
     </head>
 
     <body>
-        <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}">
+        <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
     <br><a href="/mute-ante/i">go back</a>
     </body>
