--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>{handdrawn}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);background-repeat:no-repeat;background-size:cover;padding-left: 250px;padding-top:20px;}
+        body{background-image:url(/mute-ante/i/handdrawn/background.jpg);
+            background-repeat:no-repeat;
+            background-size:cover;
+            padding-left: 250px;
+            padding-top:20px;}
     </style>
     </head>
 
