--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -16,5 +16,6 @@
 
     <body>
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
+        <img src="/mute-ante/i/handdrawn/letter.png" alt="letter">
     <br><a href="/mute-ante/i">go back</a>
     </body>
