--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -16,6 +16,20 @@
 
     <body>
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
-        <img src="/mute-ante/i/handdrawn/letter.png" alt="letter">
+        <p>
+            this page currently doesn't<br>
+            contain anything, but i hope to<br>
+            sometime put some of my drawings<br>
+            because i have a bunch of them!<br>
+            <br>
+            actually i'm really happy that i made<br>
+            this {i} thing, because before,<br>
+            i couldn't do any of this without<br>
+            messing up the... "vibe" i guess<br>
+            <br>
+            but now i can! and it's nice.<br>
+            i hope you like looking at my<br>
+            drawings! (when i put them here)
+        </p>
     <br><a href="/mute-ante/i">go back</a>
     </body>
