--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -11,6 +11,7 @@
             background-size:cover;
             padding-left: 250px;
             padding-top:20px;}
+        a, a::after, a::before{color: #080808}
     </style>
     </head>
 
@@ -32,4 +33,5 @@
             drawings! (when i put them here)
         </p>
     <br><a href="/mute-ante/i">go back</a>
+    <img src="/mute-ante/i/handdrawn/me_i_guess.png" alt="me i guess" style="margin: -20em 0 0 30em">
     </body>
