--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -17,7 +17,7 @@
 
     <body>
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
-        <p>
+        <p style="margin-left: 100px;">
             this page currently doesn't<br>
             contain anything, but i hope to<br>
             sometime put some of my drawings<br>
@@ -32,6 +32,6 @@
             i hope you like looking at my<br>
             drawings! (when i put them here)
         </p>
-    <br><a href="/mute-ante/i">go back</a>
+    <br><a href="/mute-ante/i" style="margin-left: 100px;">go back</a>
     <img src="/mute-ante/i/handdrawn/me_i_guess.png" alt="me i guess" style="margin: -20em 0 0 30em">
     </body>
