--- a/i.html
+++ b/i.html
@@ -9,11 +9,12 @@
     <body>
 
     <h1>i</h1>
-    <p>Welcome to the basement, this website's place for all that is devoid of context. It currently contains only 2 items, however it may have other things in the future.<br>Click here to <a href="/mute-ante">go upstairs</a>.</p>
+    <p>Welcome to the basement, this website's place for all that is devoid of context. It currently contains only a couple items, however it may have other things in the future.<br>Click here to <a href="/mute-ante">go upstairs</a>.</p>
     
     <ul>
-        <li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li>
         <li><a href="/mute-ante/i/buttons">buttons</a>: visual links to other folks' websites.</li>
+        <li><a href="/mute-ante/i/handdrawn">handdrawn</a>: a future place for me to put some drawings i guess.</li>
+        <li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li>
     </ul>
 
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
