--- a/i/changelog.html
+++ b/i/changelog.html
@@ -9,6 +9,8 @@
     <body>
 
     <h1>changelog</h1>
+    <h2>12/9/2022 16:56</h2>
+        <p>I've added <a href="/mute-ante/i/handdrawn"> another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
     <h2>12/9/2022 09:20</h2>
         <p>There is now <a href="/mute-ante/i/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
     <h2>11/9/2022 18:46</h2>
