--- a/i/buttons.html
+++ b/i/buttons.html
@@ -20,7 +20,7 @@
     <body>
 
     <h1>buttons</h1>
-    <p>This part of the site houses many many many (as many as currently possible) buttons, from people we talk to on discord and other folks cool things we've come accross and think you should look at!</p>
+    <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks cool things we've come accross and think you should look at!</p>
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> <a href="https://motan.gay/" class="button" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> <a href="https://chiitopia.neocities.org" class="button"><img src="https://chiitopia.neocities.org/images/balls.png" alt="my site. youre looking at it right now"></a> <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a>
     <h2>other neat places</h2>
