--- a/i/misc.html
+++ b/i/misc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@1,700&family=Archivo:wght@400;800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>> misc</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
