--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -9,6 +9,6 @@
 
     <h1>archive</h1>
 
-        <a href="/mute-ante/i/misc">go back</a>
+        > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
