--- a/i/misc.html
+++ b/i/misc.html
@@ -15,6 +15,6 @@
             <li><a href="/mute-ante/i/misc/archive">archive</a>: things that used to be here</li>
         </ul>
 
-        <a href="/mute-ante/i">go back</a>
+        > <a href="/mute-ante/i">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
