--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -16,6 +16,6 @@
         <br>I guess when i make some new text in toki pona or blender render or button or something that *fits* the style of upstairs, i'll put it there.
         <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them *work* as a button.</p>
 
-        <a href="/mute-ante/i/misc">go back</a>
+        > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
