--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -21,6 +21,6 @@
             <li>"We're feeling pretty loopy today huh?"</li>
         </ul>
 
-        <a href="/mute-ante/i/misc">go back</a>
+        > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
