--- a/i/handdrawn.html
+++ b/i/handdrawn.html
@@ -18,5 +18,12 @@
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
         <img src="/mute-ante/i/handdrawn/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them!</p>
-    <br><a href="/mute-ante/i" style="margin-left: 100px;">go back</a>
+        <ul>
+            <li><a href="/mute-ante/i/handdrawn/annoyed.jpg">annoyed face</a></li>
+            <li><a href="/mute-ante/i/handdrawn/cat_doodles.jpg">dumb cat doodles</a></li>
+            <li><a href="/mute-ante/i/handdrawn/cat_spotlight.jpg">cat in a spotlight</a></li>
+            <li><a href="/mute-ante/i/handdrawn/guy.jpg">a guy</a></li>
+            <li><a href="/mute-ante/i/handdrawn/other_guy.jpg">another guy</a></li>
+        </ul>
+    <br><a href="/mute-ante/i">go back</a>
     </body>
