--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -9,11 +9,10 @@
 
     <h1>archive</h1>
 
-        > <a href="/mute-ante/i/misc">go back</a>
-
         <ul>
             <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdrawn page before there were any drawings, with a little extra message.</li>
+            <li><a href="/mute-ante/i/misc/archive/ilo_katen">ilo katen</a>: a toki pona thing about a future.</li>
         </ul>
-
+        > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
