--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -13,8 +13,8 @@
         <br>But i guess that's a good thing! I'm being a lot more creative here, where i'm not bound to just one style.
         <br>Here i can make whatever i want and it'll fit, because it's the basement.
         <br>But... I'm kinda sad that upstairs is remaining relatively unchanged.
-        <br>I guess when i make some new text in toki pona or blender render or button or something that *fits* the style of upstairs, i'll put it there.
-        <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them *work* as a button.</p>
+        <br>I guess when i make some new text in toki pona or blender render or button or something that <b>fits</b> the style of upstairs, i'll put it there.
+        <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them <b>works</b> as a button.</p>
 
         > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
