--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -11,7 +11,7 @@
 
         <ul>
             <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdrawn page before there were any drawings, with a little extra message.</li>
-            <li><a href="/mute-ante/i/misc/archive/ilo_katen">ilo katen</a>: a toki pona diary entry thing from a future.</li>
+            <li><a href="/mute-ante/i/misc/archive/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
         </ul>
         > <a href="/mute-ante/i/misc">go back</a>
         <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
