--- a/i/changelog.html
+++ b/i/changelog.html
@@ -9,12 +9,13 @@
     <body>
 
     <h1>changelog</h1>
+    <a href="/mute-ante/i">go back</a>
+    <h2>13/9/2022 16:49</h2>
+        <p>Added some drawings to <a href="/mute-ante/i/handdrawn">handdrawn</a> and added a new <a href="/mute-ante/i/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
     <h2>12/9/2022 16:56</h2>
         <p>I've added <a href="/mute-ante/i/handdrawn">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
     <h2>12/9/2022 09:20</h2>
         <p>There is now <a href="/mute-ante/i/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
     <h2>11/9/2022 18:46</h2>
         <p>Created this section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
-    
-        <a href="/mute-ante/i">go back</a>
     </body>
