--- a/i.html
+++ b/i.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="/mute-ante/i/buttons">buttons</a>: visual links to other folks' websites.</li>
         <li><a href="/mute-ante/i/handdrawn">handdrawn</a>: a place for me to put some drawings i guess.</li>
-        <li><a href="/mute-ante/i/misc">changelog</a>: general miscellanea.</li>
+        <li><a href="/mute-ante/i/misc">misc</a>: general miscellanea.</li>
         <li><a href="/mute-ante/i/changelog">changelog</a>: logs the changes made to this section of the website.</li>
     </ul>
 
