--- a/blender.html
+++ b/blender.html
@@ -36,6 +36,7 @@
         <ul>
             <li><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></li>
             <li><a href="/mute-ante/blenders/buttons">buttons (7)</a></li>
+            <li><a href="/mute-ante/blenders/cmyk">cmyk (5)</a></li>
         </ul>
         <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
         <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
