--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -10,6 +10,7 @@
     <h1>phrases</h1>
 
         <ul>
+            <li>"being good feels good."</li>
             <li>"It feels cozy down here."</li>
             <li>"Thoughts are nice, calm and collected."</li>
             <li>"i feel small :/"</li>
