--- a/i/buttons.html
+++ b/i/buttons.html
@@ -24,7 +24,7 @@
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> <a href="https://motan.gay/" class="button" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> <a href="https://chiitopia.neocities.org" class="button"><img src="https://chiitopia.neocities.org/images/balls.png" alt="my site. youre looking at it right now"></a> <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a>
     <h2>other neat places</h2>
-    <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a> <a href="https://telepoet.neocities.org/" class="button"><img src="https://telepoet.neocities.org/images/buttons/telepoet8831.gif" alt="TELEPOET"></a>
+    <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a> <a href="https://telepoet.neocities.org/" class="button"><img src="https://telepoet.neocities.org/images/buttons/telepoet8831.gif" alt="TELEPOET"></a> <a href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
     
     <br><a href="/mute-ante/i">go back</a>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
