--- a/i.html
+++ b/i.html
@@ -9,7 +9,7 @@
     <body>
 
     <h1>i</h1>
-    <p>Welcome to the basement, this website's place for all that is devoid of context. It currently contains only a couple items, however it may have other things in the future.<br>Click here to <a href="/mute-ante">go upstairs</a>.</p>
+    <p>Welcome to the basement, this website's place for all that is devoid of context. It currently contains only a few items, however it may have other things in the future.<br>Click here to <a href="/mute-ante">go upstairs</a>.</p>
     
     <ul>
         <li><a href="/mute-ante/i/buttons">buttons</a>: visual links to other folks' websites.</li>
