--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -8,6 +8,14 @@
     <body>
 
     <h1>paragraphs</h1>
+    <h2>15/9/2022 22:05</h2>
+        <p>I don't know if i should keep the entrance to here a bit hidden
+        <br>or make it more obvious.
+        <br>If someone's been upstairs they probably didn't even come down here.
+        <br>Which, i don't know if it's a good thing or a bad one.
+        </p>
+
+    
     <h2>13/9/2022 15:43</h2>
         <p>I now realize i'm spending a lot more time here in the basement than upstairs.
         <br>But i guess that's a good thing! I'm being a lot more creative here, where i'm not bound to just one style.
