--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -13,6 +13,7 @@
         <br>or make it more obvious.
         <br>If someone's been upstairs they probably didn't even come down here.
         <br>Which, i don't know if it's a good thing or a bad one.
+        <br>(22:15) I made the entrance more obvious now.
         </p>
 
     
