--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
             <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
             <a href="/mute-ante/difference">difference</a> why it matters<br>
             <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
-            <a href="/mute-ante/i">{i}</a> the basement</div></div>
+            <a href="/mute-ante/i">{i} (the basement)</a></div></div>
     </div></body>
