--- a/i/misc/paragraphs.html
+++ b/i/misc/paragraphs.html
@@ -8,7 +8,7 @@
     <body>
 
     <h1>paragraphs</h1>
-    <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right;">
+    <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
     <h2>15/9/2022 22:05</h2>
         <p>I don't know if i should keep the entrance to here a bit hidden
         <br>or make it more obvious.
