--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
-
+        a.inverted:hover{color: #F0F0F0; font-weight: bold;}
+        a.inverted{
+        background: #F0F0F0;
+        color: #080808;
+        text-decoration-color: #F0F0F0; 
+        font-weight: bold;}
         .this-container{
             width: 600px;
             padding: 20px;
@@ -39,5 +44,5 @@
             <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
             <a href="/mute-ante/difference">difference</a> why it matters<br>
             <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
-            <a href="/mute-ante/i">{i} (the basement)</a></div></div>
+            <a href="/mute-ante/i" class="inverted">{i} (the basement)</a></div></div>
     </div></body>
