--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        a.inverted:hover{color: #F0F0F0; font-weight: bold;}
+        a.inverted:hover{background: #080808; color: #F0F0F0; font-weight: bold;}
         a.inverted{
         background: #F0F0F0;
         color: #080808;
