--- a/i/handdrawntest.html
+++ b/i/handdrawntest.html
@@ -18,6 +18,8 @@
         <img src="/mute-ante/i/handdrawn/header.png" alt="{handdrawn}" style="height:120px;">
         <img src="/mute-ante/i/handdrawn/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <img src="/mute-ante/i/handdrawn/people_button.jpg" alt="people button" style="height:200px; border: #05a1fc 5px">
+        <img src="/mute-ante/i/handdrawn/people.gif" alt="people button" style="border: solid #05a1fc 5px">
+        <img src="/mute-ante/i/handdrawn/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px">
+        <img src="/mute-ante/i/handdrawn/etc.gif" alt="etc button" style="border: solid #ffb400 5px">
     <br><a href="/mute-ante/i">go back</a>
     </body>
