--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -8,7 +8,7 @@
     <body>
 
     <h1>phrases</h1>
-
+    <img src="/mute-ante/i/misc/talk.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
         <ul>
             <li>"being good feels good."</li>
             <li>"It feels cozy down here."</li>
