--- a/i/misc.html
+++ b/i/misc.html
@@ -8,10 +8,9 @@
     <body>
 
     <h1>misc</h1>
-
         <ul>
+            <li><a href="/mute-ante/i/misc/journal">basement journal</a>: things i felt like writing</li>
             <li><a href="/mute-ante/i/misc/phrases">phrases</a>: random phrases</li>
-            <li><a href="/mute-ante/i/misc/paragraphs">paragraphs</a>: things i felt like writing</li>
             <li><a href="/mute-ante/i/misc/archive">archive</a>: things that used to be here</li>
         </ul>
 
