--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -3,11 +3,11 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>> paragraphs</title>
+        <title>> basement journal</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
 
-    <h1>paragraphs</h1>
+    <h1>basement journal</h1>
     <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
     > <a href="/mute-ante/i/misc">go back</a>
     <h2>16/9/2022 20:21</h2>
@@ -18,6 +18,7 @@
         and one of the things i'm adding are animated buttons to different categories (just 3 though).
         <br>Also on the plans is adding more drawings to the other misc pages like this one and maybe even animate them.
         <br>I think this is a big step on making my site look less... boring i guess.
+        <br><b>(22:04) Renamed this page from "paragraphs" to "basement journal", because that's basically what this is.</b>
     </p>
 
     <h2>15/9/2022 22:05</h2>
