--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -18,7 +18,7 @@
         and one of the things i'm adding are animated buttons to different categories (just 3 though).
         <br>Also on the plans is adding more drawings to the other misc pages like this one and maybe even animate them.
         <br>I think this is a big step on making my site look less... boring i guess.
-        <br><b>(22:04) Renamed this page from "paragraphs" to "basement journal", because that's basically what this is.</b>
+        <br><b>(22:04)</b> Renamed this page from "paragraphs" to "basement journal", because that's basically what this is.
     </p>
 
     <h2>15/9/2022 22:05</h2>
