changed handdrawn to doodles

--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -10,11 +10,15 @@
     <h1>basement journal</h1>
     <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
     > <a href="/mute-ante/i/misc">go back</a>
+    <h2>17/9/2022 12:36</h2>
+    <p>
+        I renamed the handdrawn page to <a href="/mute-ante/i/doodles">doodles</a>.
+    </p>
     <h2>16/9/2022 20:21</h2>
         <p>After snooping around for some cool websites to put in my <a href="/mute-ante/i/buttons">buttons</a> page and
             looking at other's websites, i think my website is lacking animation.
         <br>Things like gifs, they make the experience more... interesting than just boring, still text.
-        <br>I'm working on adding more drawings to <a href="/mute-ante/i/handdrawn">handdrawn</a> - it'll probably be done by tomorrow - 
+        <br>I'm working on adding more drawings to <a href="/mute-ante/i/doodles">handdrawn</a> - it'll probably be done by tomorrow - 
         and one of the things i'm adding are animated buttons to different categories (just 3 though).
         <br>Also on the plans is adding more drawings to the other misc pages like this one and maybe even animate them.
         <br>I think this is a big step on making my site look less... boring i guess.
