--- a/i/doodlestest.html
+++ b/i/doodlestest.html
@@ -11,7 +11,10 @@
             background-size:cover;
             padding-top:20px;}
         a, a::after, a::before{color: #080808}
-        .button:hover{background-color: #f0f0f0;}
+        .c, .m, .y{background-color: #f0f0f0;}
+        .c:hover{background-color: #003351;}
+        .c:hover{background-color: #640c25;}
+        .c:hover{background-color: #806014;}
     </style>
     </head>
 
@@ -19,8 +22,8 @@
         <img src="/mute-ante/i/doodles/doodles.gif" alt="{doodles}" style="height:120px;">
         <img src="/mute-ante/i/doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="button">
-        <img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="button">
-        <img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="button">
+        <img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c">
+        <img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m">
+        <img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y">
     <br><a href="/mute-ante/i">go back</a>
     </body>
