--- a/i/doodlestest.html
+++ b/i/doodlestest.html
@@ -13,8 +13,8 @@
         a, a::after, a::before{color: #080808}
         .c, .m, .y{background-color: #f0f0f0;}
         .c:hover{background-color: #003351;}
-        .c:hover{background-color: #640c25;}
-        .c:hover{background-color: #806014;}
+        .m:hover{background-color: #640c25;}
+        .y:hover{background-color: #806014;}
     </style>
     </head>
 
