--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -13,12 +13,15 @@
         a, a::after, a::before{color: #080808}
         img{border: solid #05a1fc 2px}
         .header{border: solid 0px}
+        .drawings{line-height:0;column-count: 5; column-gap:5px}
     </style>
     </head>
 
     <body>
         <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;" class="header"><br>
+        <div class="drawings">
         <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:120px;">
         <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:120px;">
+        </div>
     <br><a href="/mute-ante/i/doodles">go back</a>
     </body>
