--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -20,8 +20,15 @@
     <body>
         <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;" class="header"><br>
         <div class="drawings">
-        <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:120px;">
-        <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:120px;">
+        <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:100%;">
+        <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:100%;">
+        <img src="/mute-ante/i/doodles/aslep.jpg" alt="aslep" style="width:100%;">
+        <img src="/mute-ante/i/doodles/aww.jpg" alt="aww" style="width:100%;">
+        <img src="/mute-ante/i/doodles/faces.jpg" alt="faces" style="width:100%;">
+        <img src="/mute-ante/i/doodles/hapy_angy.jpg" alt="hapy angy" style="width:100%;">
+        <img src="/mute-ante/i/doodles/hmm.jpg" alt="hmm" style="width:100%;">
+        <img src="/mute-ante/i/doodles/sitting.jpg" alt="sitting" style="width:100%;">
+        <img src="/mute-ante/i/doodles/stairs.jpg" alt="stairs" style="width:100%;">
         </div>
     <br><a href="/mute-ante/i/doodles">go back</a>
     </body>
